--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   webview_flutter: ^4.13.0
   dio: ^5.8.0+1
   flutter_dotenv: ^5.2.1
+  web3dart: ^3.0.1
+  http: ^1.4.0
+  wallet: ^0.0.18
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +81,7 @@ flutter:
   assets:
     - assets/images/
     - .env
+    - lib/core/constants/megalodonAuctionContractAbi.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
